Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,13 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import pandas as pd\n",
-    "df = pf"
+    "import pandas as pd\n"
    ]
   },
   {
