Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,16 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d="
    ]
   },
   {
