--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df.i"
    ]
   },
   {
