--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "df[df[]]"
    ]
   },
   {
