Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,8 +118,7 @@
     }
    ],
    "source": [
-    "#Your code here\n",
-    "df[df['Age']].describe()"
+    "#Your code heredf['Age']"
    ]
   },
   {
