Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,28 +99,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    22.0\n",
-       "1    38.0\n",
-       "2    26.0\n",
-       "3    35.0\n",
-       "4    35.0\n",
+       "count    714.000000\n",
+       "mean      29.699118\n",
+       "std       14.526497\n",
+       "min        0.420000\n",
+       "25%       20.125000\n",
+       "50%       28.000000\n",
+       "75%       38.000000\n",
+       "max       80.000000\n",
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df['Age'].des"
+    "df['Age'].describe()"
    ]
   },
   {
