--- a/index.ipynb
+++ b/index.ipynb
@@ -192,28 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    False\n",
-       "1    False\n",
-       "2    False\n",
-       "3    False\n",
-       "4    False\n",
-       "Name: Age, dtype: bool"
+       "177"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df['Age'].isna().he"
+    "df['Age'].isna().sum()\n"
    ]
   },
   {
