--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "df['Age'].isna().sum()\n"
+    "df['Age'].isna().sum()\n",
+    "df['Age']."
    ]
   },
   {
