Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,8 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'].replace('', 29.7, inplace = True)"
+    "df['Age'].replace('', 29.7, inplace = True)\n",
+    "df['Age'].isna().sum()"
    ]
   },
   {
