--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "177"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'].replace('', 29.7, inplace = True)\n",
+    "df['Age'].replace('', 29.7, inplace = False)\n",
     "df['Age'].isna().sum()"
    ]
   },
