Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -201,14 +201,14 @@
        "177"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df['Age'].isna().sum()\n",
+    "#df['Age'].isna().sum()\n",
     "df['Age'].replace('', 29.7, inplace = False)\n",
     "df['Age'].isna().sum()"
    ]
