--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "#Your code here\n",
     "#df['Age'].isna().sum()\n",
-    "df['Age'].replace('', 29.7, inplace = False)\n",
+    "df['Age'].replace(, 29.7, inplace = False)\n",
     "df['Age'].isna().sum()"
    ]
   },
