--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     "#Your code here\n",
     "#df['Age'].isna().sum()\n",
     "df['Age'].replace(, 29.7, inplace = False)\n",
-    "\n",
+    "df['Age'.fillna(df.mean())\n",
     "df['Age'].isna().sum()"
    ]
   },
