--- a/index.ipynb
+++ b/index.ipynb
@@ -209,8 +209,8 @@
    "source": [
     "#Your code here\n",
     "#df['Age'].isna().sum()\n",
-    "df['Age'].replace(, 29.7, inplace = False)\n",
-    "df['Age'.fillna(df.mean())\n",
+    "#df['Age'].replace(, 29.7, inplace = False)\n",
+    "df['Age'].fillna(df.mean())\n",
     "df['Age'].isna().sum()"
    ]
   },
