--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "177"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
     "#Your code here\n",
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace(, 29.7, inplace = False)\n",
-    "dfdf['Age'].fillna(df.mean())\n",
+    "df['Age'] = df['Age'].fillna(df.mean())\n",
     "df['Age'].isna().sum()"
    ]
   },
