--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace(, 29.7, inplace = False)\n",
     "df['Age'] = df['Age'].fillna(df.mean())\n",
-    "df['Age'].isna().sum()"
+    "df['Age'].isna().sum()\n",
+    "d"
    ]
   },
   {
