Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,8 +270,8 @@
    "source": [
     "#Your code here\n",
     "#df['Age'].isna().sum()\n",
-    "#df['Age'].replace(, 29.7, inplace = False)\n",
-    "df['Age'] = df['Age'].fillna(df.mean())\n",
+    "df['Age'].replace(, 29.7, inplace = False)\n",
+    "#df['Age'] = df['Age'].fillna(df.mean())\n",
     "df['Age'].isna().sum()\n",
     "df['Age']\n"
    ]
