Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,8 @@
     "#Your code here\n",
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace('NaN', 29.7, inplace = False)\n",
-    "df['Age'] = df['Age'].fillna(df.mean())\n",
+    "#df['Age'] = df['Age'].fillna(df.mean())\n",
+    "\n",
     "df['Age'].isna().sum()\n",
     "#df['Age']\n"
    ]
