--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace('NaN', 29.7, inplace = False)\n",
     "#df['Age'] = df['Age'].fillna(df.mean())\n",
-    "\n",
+    "df['Age'].sa\n",
     "df['Age'].isna().sum()\n",
     "#df['Age']\n"
    ]
