--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,8 @@
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace('NaN', 29.7, inplace = False)\n",
     "#df['Age'] = df['Age'].fillna(df.mean())\n",
-    "df['Age'].sa\n",
+    "df['Age'].app\n",
+    "df.apply(lambda x: x.fillna(x.mean()),axis=0)\n",
     "df['Age'].isna().sum()\n",
     "#df['Age']\n"
    ]
