--- a/index.ipynb
+++ b/index.ipynb
@@ -192,79 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0      22.0\n",
-       "1      38.0\n",
-       "2      26.0\n",
-       "3      35.0\n",
-       "4      35.0\n",
-       "5       NaN\n",
-       "6      54.0\n",
-       "7       2.0\n",
-       "8      27.0\n",
-       "9      14.0\n",
-       "10      4.0\n",
-       "11     58.0\n",
-       "12     20.0\n",
-       "13     39.0\n",
-       "14     14.0\n",
-       "15     55.0\n",
-       "16      2.0\n",
-       "17      NaN\n",
-       "18     31.0\n",
-       "19      NaN\n",
-       "20     35.0\n",
-       "21     34.0\n",
-       "22     15.0\n",
-       "23     28.0\n",
-       "24      8.0\n",
-       "25     38.0\n",
-       "26      NaN\n",
-       "27     19.0\n",
-       "28      NaN\n",
-       "29      NaN\n",
-       "       ... \n",
-       "861    21.0\n",
-       "862    48.0\n",
-       "863     NaN\n",
-       "864    24.0\n",
-       "865    42.0\n",
-       "866    27.0\n",
-       "867    31.0\n",
-       "868     NaN\n",
-       "869     4.0\n",
-       "870    26.0\n",
-       "871    47.0\n",
-       "872    33.0\n",
-       "873    47.0\n",
-       "874    28.0\n",
-       "875    15.0\n",
-       "876    20.0\n",
-       "877    19.0\n",
-       "878     NaN\n",
-       "879    56.0\n",
-       "880    25.0\n",
-       "881    33.0\n",
-       "882    22.0\n",
-       "883    28.0\n",
-       "884    25.0\n",
-       "885    39.0\n",
-       "886    27.0\n",
-       "887    19.0\n",
-       "888     NaN\n",
-       "889    26.0\n",
-       "890    32.0\n",
-       "Name: Age, Length: 891, dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "map() got an unexpected keyword argument 'axis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-7f671e1ce2b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#df['Age'].replace('NaN', 29.7, inplace = False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#df['Age'] = df['Age'].fillna(df.mean())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m#df.apply(lambda x: x.fillna(x.mean()),axis=0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: map() got an unexpected keyword argument 'axis'"
+     ]
     }
    ],
    "source": [
@@ -272,8 +212,8 @@
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace('NaN', 29.7, inplace = False)\n",
     "#df['Age'] = df['Age'].fillna(df.mean())\n",
-    "df['Age'].map(lambda x: x.fillna(x.mean()),axis=0))\n",
-    "df.apply(lambda x: x.fillna(x.mean()),axis=0)\n",
+    "df['Age'].map(lambda x: x.fillna(x.mean()),axis=0)\n",
+    "#df.apply(lambda x: x.fillna(x.mean()),axis=0)\n",
     "df['Age'].isna().sum()\n",
     "#df['Age']\n"
    ]
