--- a/index.ipynb
+++ b/index.ipynb
@@ -192,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-34-c6f598f1fb91>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-35-fbd040e5f74d>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-c6f598f1fb91>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    df['Age'].isna().sum()\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-fbd040e5f74d>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    df['Age']\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -211,8 +211,8 @@
     "#df['Age'] = df['Age'].fillna(df.mean())\n",
     "df['Age'].map(lambda x: x.fillna(x.mean())\n",
     "#df.apply(lambda x: x.fillna(x.mean()),axis=0)\n",
-    "df['Age'].isna().sum()\n",
-    "#df['Age']\n"
+    "#df['Age'].isna().sum()\n",
+    "df['Age']\n"
    ]
   },
   {
