--- a/index.ipynb
+++ b/index.ipynb
@@ -192,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-35-fbd040e5f74d>, line 8)",
+     "evalue": "invalid syntax (<ipython-input-37-caabb1e433fa>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-fbd040e5f74d>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    df['Age']\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-caabb1e433fa>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    df['Age']\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
     "#df['Age'].isna().sum()\n",
     "#df['Age'].replace('NaN', 29.7, inplace = False)\n",
     "#df['Age'] = df['Age'].fillna(df.mean())\n",
-    "df['Age'].appl(lambda x: x.fillna(x.mean())\n",
+    "df['Age'].apply(lambda x: x.fillna(x.mean()), axis = 0\n",
     "#df.apply(lambda x: x.fillna(x.mean()),axis=0)\n",
     "#df['Age'].isna().sum()\n",
     "df['Age']\n"
