Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,27 +192,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-43-caabb1e433fa>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-caabb1e433fa>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    df['Age']\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    22.0\n",
+       "1    38.0\n",
+       "2    26.0\n",
+       "3    35.0\n",
+       "4    35.0\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "#df['Age'].isna().sum()\n",
-    "#df['Age'].replace('NaN', 29.7, inplace = False)\n",
-    "#df['Age'] = df['Age'].fillna(df.mean())\n",
-    "df['Age'].apply(lambda x: x.fillna(x.mean()), axis = 0\n",
-    "#df.apply(lambda x: x.fillna(x.mean()),axis=0)\n",
-    "#df['Age'].isna().sum()\n",
-    "df['Age']\n"
+    "df['Age'].head()\n"
    ]
   },
   {
