--- a/index.ipynb
+++ b/index.ipynb
@@ -209,6 +209,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
+    "df[['normal_price','\\\\']].fillna(method='ffill')\n",
     "#df[Age].fillna(df['Age'].mean())"
    ]
   },
