--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df[['Age'].fillna(method='ffill')\n",
+    "df['Age']=df[['Age'].fillna(method='ffill')\n",
     "#df[Age].fillna(df['Age'].mean())"
    ]
   },
