--- a/index.ipynb
+++ b/index.ipynb
@@ -192,24 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "177"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'] = df[['Age'].fillna(method='ffill')\n",
+    "df['Age'] = df['Age'].fillna(method='ffill')\n",
     "#df[Age].fillna(df['Age'].mean())"
    ]
   },
