--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "df['Age'] = df['Age'].fillna(method='ffill')\n",
-    "#df[Age].fillna(df['Age'].mean())"
+    "#df[Age].fillna(df['Age'].mean())\n",
+    "df['Age'].isna"
    ]
   },
   {
