Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,15 +192,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "df['Age'] = df['Age'].fillna(method='ffill')\n",
     "#df[Age].fillna(df['Age'].mean())\n",
-    "df['Age'].isna"
+    "df['Age'].isna().sum()"
    ]
   },
   {
