Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,11 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    891.00000\n",
+       "mean      29.58156\n",
+       "std       14.55459\n",
+       "min        0.42000\n",
+       "25%       20.00000\n",
+       "50%       28.00000\n",
+       "75%       38.00000\n",
+       "max       80.00000\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['Age'].d"
+    "df['Age'].describe()"
    ]
   },
   {
