Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "177"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,8 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'] = df['Age'].fillna(method='ffill')\n",
+    "#df['Age'] = df['Age'].fillna(method='ffill')\n",
+    "df[]\n",
     "#df[Age].fillna(df['Age'].mean())\n",
     "df['Age'].isna().sum()"
    ]
