Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "#df['Age'] = df['Age'].fillna(method='ffill')\n",
-    "df[]\n",
+    "df['Age'] = \n",
     "#df[Age].fillna(df['Age'].mean())\n",
     "df['Age'].isna().sum()"
    ]
