--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,8 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as n"
    ]
   },
   {
@@ -210,7 +211,7 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "#df['Age'] = df['Age'].fillna(method='ffill')\n",
-    "df['Age'] = \n",
+    "df['Age'] = df\n",
     "#df[Age].fillna(df['Age'].mean())\n",
     "df['Age'].isna().sum()"
    ]
