Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,19 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
