--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "177"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "#df['Age'] = df['Age'].fillna(method='ffill')\n",
-    "df['Age'] = df['Age'].replace('NaN', np.mean)\n",
+    "df['Age'] = df['Age'].replace('NaN', np.mean(df['Age']))\n",
     "#df[Age].fillna(df['Age'].mean())\n",
     "df['Age'].isna().sum()"
    ]
