--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "177"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,31 +211,31 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "#df['Age'] = df['Age'].fillna(method='ffill')\n",
-    "df['Age'] = df['Age'].replace('NaN', np.mean(df['Age']))\n",
+    "df['Age'] = df['Age'].replace('', np.mean(df['Age']))\n",
     "#df[Age].fillna(df['Age'].mean())\n",
     "df['Age'].isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    891.00000\n",
-       "mean      29.58156\n",
-       "std       14.55459\n",
-       "min        0.42000\n",
-       "25%       20.00000\n",
-       "50%       28.00000\n",
-       "75%       38.00000\n",
-       "max       80.00000\n",
+       "count    714.000000\n",
+       "mean      29.699118\n",
+       "std       14.526497\n",
+       "min        0.420000\n",
+       "25%       20.125000\n",
+       "50%       28.000000\n",
+       "75%       38.000000\n",
+       "max       80.000000\n",
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
