--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "#df['Age'] = df['Age'].fillna(method='ffill')\n",
-    "df['Age'] = df['Age'].fillna(df['Age'].mean())\n",
+    "df['Age'].fillna(df['Age'].mean())\n",
     "\n",
     "#df[Age].fillna(df['Age'].mean())\n",
     "df['Age'].isna().sum()"
