--- a/index.ipynb
+++ b/index.ipynb
@@ -193,16 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "count    891.000000\n",
+       "mean      29.699118\n",
+       "std       13.002015\n",
+       "min        0.420000\n",
+       "25%       22.000000\n",
+       "50%       29.699118\n",
+       "75%       35.000000\n",
+       "max       80.000000\n",
+       "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +222,7 @@
     "df['Age'].fillna(df['Age'].mean()).describe()\n",
     "\n",
     "#df[Age].fillna(df['Age'].mean())\n",
-    "df['Age'].isna().sum()"
+    "#df['Age'].isna().sum()"
    ]
   },
   {
