--- a/index.ipynb
+++ b/index.ipynb
@@ -331,7 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "df['Age'].isna"
    ]
   },
   {
