--- a/index.ipynb
+++ b/index.ipynb
@@ -327,12 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "177"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "df['Age'].isna"
+    "df['Age'].isna().sum()"
    ]
   },
   {
