--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "df['Age'].isna().sum()\n"
+    "df['Age'].isna().sum()\n",
+    "df.d"
    ]
   },
   {
