--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df.dropna()"
+    "df[.dropna()"
    ]
   },
   {
