--- a/index.ipynb
+++ b/index.ipynb
@@ -327,85 +327,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0      22.0\n",
-       "1      38.0\n",
-       "2      26.0\n",
-       "3      35.0\n",
-       "4      35.0\n",
-       "6      54.0\n",
-       "7       2.0\n",
-       "8      27.0\n",
-       "9      14.0\n",
-       "10      4.0\n",
-       "11     58.0\n",
-       "12     20.0\n",
-       "13     39.0\n",
-       "14     14.0\n",
-       "15     55.0\n",
-       "16      2.0\n",
-       "18     31.0\n",
-       "20     35.0\n",
-       "21     34.0\n",
-       "22     15.0\n",
-       "23     28.0\n",
-       "24      8.0\n",
-       "25     38.0\n",
-       "27     19.0\n",
-       "30     40.0\n",
-       "33     66.0\n",
-       "34     28.0\n",
-       "35     42.0\n",
-       "37     21.0\n",
-       "38     18.0\n",
-       "       ... \n",
-       "856    45.0\n",
-       "857    51.0\n",
-       "858    24.0\n",
-       "860    41.0\n",
-       "861    21.0\n",
-       "862    48.0\n",
-       "864    24.0\n",
-       "865    42.0\n",
-       "866    27.0\n",
-       "867    31.0\n",
-       "869     4.0\n",
-       "870    26.0\n",
-       "871    47.0\n",
-       "872    33.0\n",
-       "873    47.0\n",
-       "874    28.0\n",
-       "875    15.0\n",
-       "876    20.0\n",
-       "877    19.0\n",
-       "879    56.0\n",
-       "880    25.0\n",
-       "881    33.0\n",
-       "882    22.0\n",
-       "883    28.0\n",
-       "884    25.0\n",
-       "885    39.0\n",
-       "886    27.0\n",
-       "887    19.0\n",
-       "889    26.0\n",
-       "890    32.0\n",
-       "Name: Age, Length: 714, dtype: float64"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'decribe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-84-409e74a3765d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecribe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'decribe'"
+     ]
     }
    ],
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'].dropna().de"
+    "df['Age'].dropna().decribe()"
    ]
   },
   {
