--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'].dropna(axis=0, h).describe()"
+    "df['Age'].dropna(axis=0).describe()"
    ]
   },
   {
