--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df.dropna(subset=['Age']).describe()"
+    "df.dropna(subset=['Age'])"
    ]
   },
   {
