--- a/index.ipynb
+++ b/index.ipynb
@@ -1549,7 +1549,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df.dropna(subset=['Age'])"
+    "df.dropna(subset=['Age'])."
    ]
   },
   {
