Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,147 +327,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>714.000000</td>\n",
-       "      <td>714.000000</td>\n",
-       "      <td>714.000000</td>\n",
-       "      <td>714.000000</td>\n",
-       "      <td>714.000000</td>\n",
-       "      <td>714.000000</td>\n",
-       "      <td>714.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>447.582633</td>\n",
-       "      <td>448.582633</td>\n",
-       "      <td>0.406162</td>\n",
-       "      <td>29.699118</td>\n",
-       "      <td>0.512605</td>\n",
-       "      <td>0.431373</td>\n",
-       "      <td>34.694514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>259.119524</td>\n",
-       "      <td>259.119524</td>\n",
-       "      <td>0.491460</td>\n",
-       "      <td>14.526497</td>\n",
-       "      <td>0.929783</td>\n",
-       "      <td>0.853289</td>\n",
-       "      <td>52.918930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.420000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>221.250000</td>\n",
-       "      <td>222.250000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>20.125000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.050000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>444.000000</td>\n",
-       "      <td>445.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>15.741700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>676.750000</td>\n",
-       "      <td>677.750000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>38.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>33.375000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>890.000000</td>\n",
-       "      <td>891.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>512.329200</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Unnamed: 0  PassengerId    Survived         Age       SibSp  \\\n",
-       "count  714.000000   714.000000  714.000000  714.000000  714.000000   \n",
-       "mean   447.582633   448.582633    0.406162   29.699118    0.512605   \n",
-       "std    259.119524   259.119524    0.491460   14.526497    0.929783   \n",
-       "min      0.000000     1.000000    0.000000    0.420000    0.000000   \n",
-       "25%    221.250000   222.250000    0.000000   20.125000    0.000000   \n",
-       "50%    444.000000   445.000000    0.000000   28.000000    0.000000   \n",
-       "75%    676.750000   677.750000    1.000000   38.000000    1.000000   \n",
-       "max    890.000000   891.000000    1.000000   80.000000    5.000000   \n",
-       "\n",
-       "            Parch        Fare  \n",
-       "count  714.000000  714.000000  \n",
-       "mean     0.431373   34.694514  \n",
-       "std      0.853289   52.918930  \n",
-       "min      0.000000    0.000000  \n",
-       "25%      0.000000    8.050000  \n",
-       "50%      0.000000   15.741700  \n",
-       "75%      1.000000   33.375000  \n",
-       "max      6.000000  512.329200  "
+       "0      22.0\n",
+       "1      38.0\n",
+       "2      26.0\n",
+       "3      35.0\n",
+       "4      35.0\n",
+       "6      54.0\n",
+       "7       2.0\n",
+       "8      27.0\n",
+       "9      14.0\n",
+       "10      4.0\n",
+       "11     58.0\n",
+       "12     20.0\n",
+       "13     39.0\n",
+       "14     14.0\n",
+       "15     55.0\n",
+       "16      2.0\n",
+       "18     31.0\n",
+       "20     35.0\n",
+       "21     34.0\n",
+       "22     15.0\n",
+       "23     28.0\n",
+       "24      8.0\n",
+       "25     38.0\n",
+       "27     19.0\n",
+       "30     40.0\n",
+       "33     66.0\n",
+       "34     28.0\n",
+       "35     42.0\n",
+       "37     21.0\n",
+       "38     18.0\n",
+       "       ... \n",
+       "856    45.0\n",
+       "857    51.0\n",
+       "858    24.0\n",
+       "860    41.0\n",
+       "861    21.0\n",
+       "862    48.0\n",
+       "864    24.0\n",
+       "865    42.0\n",
+       "866    27.0\n",
+       "867    31.0\n",
+       "869     4.0\n",
+       "870    26.0\n",
+       "871    47.0\n",
+       "872    33.0\n",
+       "873    47.0\n",
+       "874    28.0\n",
+       "875    15.0\n",
+       "876    20.0\n",
+       "877    19.0\n",
+       "879    56.0\n",
+       "880    25.0\n",
+       "881    33.0\n",
+       "882    22.0\n",
+       "883    28.0\n",
+       "884    25.0\n",
+       "885    39.0\n",
+       "886    27.0\n",
+       "887    19.0\n",
+       "889    26.0\n",
+       "890    32.0\n",
+       "Name: Age, Length: 714, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +405,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Ag']"
+    "df['Age'].dropna()"
    ]
   },
   {
