--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'].dropna()"
+    "df['df['Age'].dropna()"
    ]
   },
   {
