--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,8 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'] = df['Age'].dropna()"
+    "df['Age'] = df['Age'].dropna()\n",
+    "df['Age'].is"
    ]
   },
   {
