--- a/index.ipynb
+++ b/index.ipynb
@@ -344,8 +344,7 @@
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'] = df['Age'].dropna()\n",
-    "df['Age'].isna().sum()"
+    "df['Age'] = df['Age'].dropna()\n"
    ]
   },
   {
