Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,24 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "177"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
-    "df['Age'] = df['Age'].dropna()\n"
+    "\n",
+    "df['Age'] = df['Age'].dropna(inplace=True)\n"
    ]
   },
   {
