Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
     "#Your code here\n",
     "df['Age'].isna().sum()\n",
     "\n",
-    "df['Age'] = df['Age'].dropna(inplace=True)\n"
+    "df['Age'] = df['Age'].dropna(inplace=True)\n",
+    "\n"
    ]
   },
   {
