Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,12 +327,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "891\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "df['Age'].isna().sum()\n",
+    "print(df['Age'].isna().sum())\n",
     "\n",
     "df['Age'] = df['Age'].dropna(inplace=True)\n",
     "\n"
